# fn

./: Cargo.toml  Dockerfile  Makefile  README.md
src/: combinatorics.rs  lib.rs  sudoku.rs  words.rs
ui/: .env  package.json
ui/public/: index.html
ui/src/: App.js  Functions.js  LettersToWords.js  SudokuSolver.js  index.css
